--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/node": "^22.12.0",
     "eslint-plugin-jsdoc": "^50.6.1",
     "glob": "^11.0.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.20.0"
   },
   "publishConfig": {
